--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,8 +1,6 @@
 name: Lint
-on:
-  pull_request:
-    branches:
-      - main
+on: [push, pull_request]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,5 +14,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
+          cache: 'pnpm'
       - run: pnpm i
       - run: pnpm lint
